--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -12,6 +12,7 @@
     </div>
   </section>
 
+<div class="containt3">
 <section class="platform_sec">
   <div class="platform_row">
     <div class="platform_col">
@@ -38,7 +39,7 @@
       </button>
     </div>
     <div class="platform_col_2">
-      <img class="platform_img" src="assets/sportsbetting2.png" width="544" height="500"
+      <img class="platform_img" src="assets/sportsbetting2.png" 
         alt="Sport Betting Software">
       <!-- <div class="platform_you_tube">
         <a href="#" aria-label="youtube link"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
@@ -71,7 +72,7 @@
       <div class="white_back"></div>
     </div>
     <div class="whites_col_1">
-      <img class="whites_sec_img2" src="assets/Sports Betting Softwares1.png" width="543" height="317"
+      <img class="whites_sec_img2" src="assets/Sports Betting Softwares1.png" 
         alt="White Label Solutions" />
     </div>
   </div>
@@ -137,7 +138,7 @@
       <h2 class="live_header">
         Play at the live casino as if you were directly inside the casino
       </h2>
-      <img src="assets/vrnl 19_11zon.webp" width="790" height="372" alt="live casino provider" />
+      <img src="assets/vrnl 19_11zon.webp" width="700" height="372" alt="live casino provider" />
     </div>
     <div class="live_col_1">
       <h2 class="live_header_1">Live Casino</h2>
@@ -166,7 +167,7 @@
 <section class="integration_sec">
   <div class="integration_row">
     <div class="integration_col">
-      <img src="assets/api-iframe.png" title="integration_platforms" width="545" height="500"
+      <img src="assets/api-iframe.png" title="integration_platforms" class="integration_col_img" 
         alt="Integration with other platforms" />
     </div>
     <div class="integration_col_1">
@@ -229,6 +230,7 @@
   </div>
 </section>
 
+</div>
 <app-contact-com></app-contact-com>
 
 <app-footer></app-footer>
