--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -103,6 +103,8 @@
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a  routerlink="/contact" aria-label="Contact" class="act" ng-reflect-router-link="/contact" href="#/contact">Contact</a>
             </li>
+            <li><a  routerlink="/payment" aria-label="Contact" class="act" ng-reflect-router-link="/payment" href="#/payment">Payment Provider</a>
+            </li>
           </ul>
           </div>
         </div>
@@ -289,10 +291,20 @@
             <h2 class="accordion-header" id="flush-headingseven">
               <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
-                <a routerLink="/contact">contact Us</a>
+                <a routerLink="/contact">Contact Us</a>
               </button>
             </h2>
           </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingseven">
+              <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
+                <a routerLink="/payment">Payment Provider</a>
+              </button>
+            </h2>
+          </div>
+        
         
         </div>
       </div>
