--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -1,1 +1,393 @@
-*,.containt{font-family:Poppins!important}.sec-header,h2{font-size:34px}h2,p{display:block;margin-inline-start:0;margin-inline-end:0}.bold,.lanhead a:hover,.sec-header,p{color:#000}*{word-wrap:break-word}.white_label_imgs{width:595px;height:400px}.custome_img{width:485px;height:345px}.label-para{padding-left:15px;padding-right:15px}.white-label{padding:80px 0}.sec-header{text-align:left;line-height:1.3}@media screen and (max-width:820px){.custome_img,.white_label_imgs{width:100%;height:auto}}.containt{width:1233px;justify-content:center;margin:0 auto}.custom-sec,.font-weight,p{font-family:Poppins}.bold{font-weight:900}.label-list-para{justify-content:center;margin:44px auto 0;display:grid;font-size:16px;color:#000;font-weight:350}p{line-height:30px;margin-block-end:1em;font-weight:395}.head-custom h1{font-weight:600;font-size:50px;color:#a0c528;line-height:91px;text-align:left}.dash{font-size:18px}h2{margin-block-start:0.83em;margin-block-end:0.83em;font-weight:700}.letter-spacing{letter-spacing:1px}.plat-odd{margin-top:75px!important;margin-left:-15px;margin-right:-15px}.font-weight{font-weight:600;font-size:50px}@media (max-width:1200px){.containt{width:1170px}}@media only screen and (min-width:820px) and (min-height:1180px){.containt{width:818px}.cutom-main{justify-content:left;gap:0}.white_label_imgs{width:455px;height:296px}.label-para p{font-size:20px;line-height:2}.label-list-para{margin-left:38px;margin-top:0}.plat-odd,.tools{margin-left:0;margin-right:0}.head-custom h1,.plat-oddhead h1,.sec-header,.toolhead h1{font-size:28px}.sec-header{font-weight:100px}p{font-size:20px;line-height:1.7}.head-custom{letter-spacing:1px}.plat-odd{margin-top:0!important;gap:0;padding-left:40px;padding-right:84px}.odd-headimg img,.tool_sec_img{width:354px;height:254px}.tools{gap:20px}.risk-img{width:17%}.branding-head,.risk-para{width:66%}.branding{justify-content:start!important}.branding-img{width:24%}.branding-img img{margin-left:-23px}.lanimg img{margin-left:-89px}.lanhead{width:70%}.lanimg{width:16%}.custome_img{width:100%;height:auto}}@media (max-width:768px){.containt{width:360px}.first-head h1{font-size:27px;letter-spacing:1.5px}.first-sec{height:284px;padding:72px 0 65px!important}.home{font-size:18px;font-weight:395;display:grid}.dash{padding-bottom:10px}.lil-para{letter-spacing:.5px}.branding-head h1,.branding-head h2,.branding-head p,.lanhead h1,.lanhead h2,.lanhead p,.risk-para h1,.risk-para h2,.risk-para p,.white-label{padding:0}.label-list-para,.plat-oddhead{padding-left:15px;padding-right:15px}.head-custom h1{font-size:23px;line-height:0;margin-bottom:51px}.sec-header{font-size:18px;line-height:0;margin-bottom:34px}.niva-separator1{margin-left:15px}.plat-odd{margin-top:0!important}.tools{margin-top:0}.custom-sec{box-sizing:border-box;width:100%;margin-top:43px}p{line-height:28px}.plat-oddhead h1,.toolhead h1{font-size:23px}.plat-odd h1{line-height:3.6}.label-para{padding-left:0;padding-right:0;font-weight:395}.branding-head h1,.lanhead h1,.risk-para h1{font-size:22px}.branding-head h2,.branding-head p,.lanhead h2,.lanhead p,.risk-para h2,.risk-para p{font-size:19px}}@media (max-width:370px){.branding-head,.lanhead{padding-left:15px}}@media (max-width:280px){.containt{width:280px}.head-custom h1{font-size:30px}.sec-header{font-size:22px}.sec-line{line-height:30px}}.lanhead a{color:#a0c528}.branding-head p,.head-custom p,.lanhead p,.plat-oddhead p,.risk-para p{font-size:16px}.odds_sec_img{width:557px;height:400px}
+*,
+.containt {
+    font-family: Poppins !important
+}
+
+.sec-header,
+h2 {
+    font-size: 34px
+}
+
+h2,
+p {
+    display: block;
+    margin-inline-start: 0;
+    margin-inline-end: 0
+}
+
+.bold,
+.lanhead a:hover,
+.sec-header,
+p {
+    color: #000
+}
+
+* {
+    word-wrap: break-word
+}
+
+.white_label_imgs {
+    width: 595px;
+    height: 400px
+}
+
+.custome_img {
+    width: 485px;
+    height: 345px
+}
+
+.label-para {
+    padding-left: 15px;
+    padding-right: 15px
+}
+
+.white-label {
+    padding: 80px 0
+}
+
+.sec-header {
+    text-align: left;
+    line-height: 1.3
+}
+
+@media screen and (max-width:820px) {
+
+    .custome_img,
+    .white_label_imgs {
+        width: 100%;
+        height: auto
+    }
+}
+
+.containt {
+    width: 1233px;
+    justify-content: center;
+    margin: 0 auto
+}
+
+.custom-sec,
+.font-weight,
+p {
+    font-family: Poppins
+}
+
+.bold {
+    font-weight: 900
+}
+
+.label-list-para {
+    justify-content: center;
+    margin: 44px auto 0;
+    display: grid;
+    font-size: 16px;
+    color: #000;
+    font-weight: 350
+}
+
+p {
+    line-height: 30px;
+    margin-block-end: 1em;
+    font-weight: 395
+}
+
+.head-custom h1 {
+    font-weight: 600;
+    font-size: 50px;
+    color: #a0c528;
+    line-height: 91px;
+    text-align: left
+}
+
+.dash {
+    font-size: 18px
+}
+
+h2 {
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    font-weight: 700
+}
+
+.letter-spacing {
+    letter-spacing: 1px
+}
+
+.plat-odd {
+    margin-top: 75px !important;
+    margin-left: -15px;
+    margin-right: -15px
+}
+
+.font-weight {
+    font-weight: 600;
+    font-size: 50px
+}
+
+@media (max-width:1200px) {
+    .containt {
+        width: 1170px
+    }
+}
+
+@media only screen and (min-width:820px) and (min-height:1180px) {
+    .containt {
+        width: 818px
+    }
+
+    .cutom-main {
+        justify-content: left;
+        gap: 0
+    }
+
+    .white_label_imgs {
+        width: 455px;
+        height: 296px
+    }
+
+    .label-para p {
+        font-size: 20px;
+        line-height: 2
+    }
+
+    .label-list-para {
+        margin-left: 38px;
+        margin-top: 0
+    }
+
+    .plat-odd,
+    .tools {
+        margin-left: 0;
+        margin-right: 0
+    }
+
+    .head-custom h1,
+    .plat-oddhead h1,
+    .sec-header,
+    .toolhead h1 {
+        font-size: 28px
+    }
+
+    .sec-header {
+        font-weight: 100px
+    }
+
+    p {
+        font-size: 20px;
+        line-height: 1.7
+    }
+
+    .head-custom {
+        letter-spacing: 1px
+    }
+
+    .plat-odd {
+        margin-top: 0 !important;
+        gap: 0;
+        padding-left: 40px;
+        padding-right: 84px
+    }
+
+    .odd-headimg img,
+    .tool_sec_img {
+        width: 354px;
+        height: 254px
+    }
+
+    .tools {
+        gap: 20px
+    }
+
+    .risk-img {
+        width: 17%
+    }
+
+    .branding-head,
+    .risk-para {
+        width: 66%
+    }
+
+    .branding {
+        justify-content: start !important
+    }
+
+    .branding-img {
+        width: 24%
+    }
+
+    .branding-img img {
+        margin-left: -23px
+    }
+
+    .lanimg img {
+        margin-left: -89px
+    }
+
+    .lanhead {
+        width: 70%
+    }
+
+    .lanimg {
+        width: 16%
+    }
+
+    .custome_img {
+        width: 100%;
+        height: auto
+    }
+}
+
+@media (max-width:768px) {
+    .containt {
+        width: 360px
+    }
+
+    .first-head h1 {
+        font-size: 27px;
+        letter-spacing: 1.5px
+    }
+
+    .first-sec {
+        height: 284px;
+        padding: 72px 0 65px !important
+    }
+
+    .home {
+        font-size: 18px;
+        font-weight: 395;
+        display: grid
+    }
+
+    .dash {
+        padding-bottom: 10px
+    }
+
+    .lil-para {
+        letter-spacing: .5px
+    }
+
+    .branding-head h1,
+    .branding-head h2,
+    .branding-head p,
+    .lanhead h1,
+    .lanhead h2,
+    .lanhead p,
+    .risk-para h1,
+    .risk-para h2,
+    .risk-para p,
+    .white-label {
+        padding: 0
+    }
+
+    .label-list-para,
+    .plat-oddhead {
+        padding-left: 15px;
+        padding-right: 15px
+    }
+
+    .head-custom h1 {
+        font-size: 23px;
+        line-height: 0;
+        margin-bottom: 51px
+    }
+
+    .sec-header {
+        font-size: 18px;
+        line-height: 0;
+        margin-bottom: 34px
+    }
+
+    .niva-separator1 {
+        margin-left: 15px
+    }
+
+    .plat-odd {
+        margin-top: 0 !important
+    }
+
+    .tools {
+        margin-top: 0
+    }
+
+    .custom-sec {
+        box-sizing: border-box;
+        width: 100%;
+        margin-top: 43px
+    }
+
+    p {
+        line-height: 28px
+    }
+
+    .plat-oddhead h1,
+    .toolhead h1 {
+        font-size: 23px
+    }
+
+    .plat-odd h1 {
+        line-height: 3.6
+    }
+
+    .label-para {
+        padding-left: 0;
+        padding-right: 0;
+        font-weight: 395
+    }
+
+    .branding-head h1,
+    .lanhead h1,
+    .risk-para h1 {
+        font-size: 22px
+    }
+
+    .branding-head h2,
+    .branding-head p,
+    .lanhead h2,
+    .lanhead p,
+    .risk-para h2,
+    .risk-para p {
+        font-size: 19px
+    }
+}
+
+@media (max-width:370px) {
+
+    .branding-head,
+    .lanhead {
+        padding-left: 15px
+    }
+}
+
+@media (max-width:280px) {
+    .containt {
+        width: 280px
+    }
+
+    .head-custom h1 {
+        font-size: 30px
+    }
+
+    .sec-header {
+        font-size: 22px
+    }
+
+    .sec-line {
+        line-height: 30px
+    }
+}
+
+.lanhead a {
+    color: #a0c528
+}
+
+.branding-head p,
+.head-custom p,
+.lanhead p,
+.plat-oddhead p,
+.risk-para p {
+    font-size: 16px
+}
+
+.odds_sec_img {
+    width: 557px;
+    height: 400px
+}
