--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -16,7 +16,7 @@
 <section class="platform_sec">
   <div class="platform_row">
     <div class="platform_col">
-      <h2 class="platform_header"><a href="https://vrnlexch.com/" target="_blank"  class="gradient-text blink-soft">Sport Betting Software Solutions</a></h2>
+      <h2 class="platform_header"><i class="fa-regular fa-hand-point-right fa-fade fa-2xs" style="color: #ff0200;padding-top: 15px "></i><a href="https://vrnlexch.com/" target="_blank"  class="gradient-text blink-soft"> Sport Betting Software Solutions</a></h2>
 
       <p class="platform_para">
         Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interface, advanced analytics, and live betting options make them a go-to choice for both novice and experienced bettors. With the convenience and excitement they bring, it's no wonder that these solutions are revolutionizing the industry.      </p>
