--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -997,7 +997,7 @@ textarea {
 }
 
 .containt3 {
-    width: 1233px;
+    /* width: 1233px; */
     justify-content: center;
     margin: 0 auto;
 }
