--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -50,7 +50,7 @@
         <img class="platform_img" src="assets/sportsbetting2.png" alt="Sport Betting Software">
         <div class="platform_you_tube aside">
           <a href="#" aria-label="youtube link">
-              <video controls playsinline autoplay [muted]="true" #videoPlayer class="video" (loadedmetadata)="onVideoLoad(videoPlayer)"
+              <video controls controlsList="nodownload" playsinline autoplay [muted]="true" #videoPlayer class="video" (loadedmetadata)="onVideoLoad(videoPlayer)"
               src="../../assets/vrnl_info.webm" width="560" height="315" frameborder="0" ></video>
           </a>
         </div>
