--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -109,10 +109,10 @@
               </div>
 </div>
     <div class="card"  >
-        <div class="flip-box-front"> <a href="https://babu88.vrnlexch.com/"target="_blank">
-            <img class="lb_partner_logo logo4" src="assets/bb88_logo_w_sponsor.webp "alt="bb88_logo_w_sponsor" ></a>
+        <div class="flip-box-front"> <a href="https://babu365.com/"target="_blank">
+            <img class="lb_partner_logo logo4" src="assets/Babu365.png "alt="bb88_logo_w_sponsor" ></a>
            
-            <h4 class="logoname">Babu88</h4>
+            <h4 class="logoname">Babu365</h4>
             </div>
             <div class="card-content">
                 <h2>
