--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -18,7 +18,7 @@
       <div class="platform_col">
         <h2 class="platform_header"><i class="fa-regular fa-hand-point-right fa-fade fa-2xs"
             style="color: #ff0200;padding-top: 15px "></i><a href="https://vrnlexch.com/" target="_blank"
-            class="gradient-text blink-soft"> Sport Betting Software Solutions</a></h2>
+            class="gradient-text blink-soft"> Sports Betting Software Solutions</a></h2>
 
         <p class="platform_para">
           Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interface,
