--- a/src/app/our-theme/our-theme.component.html
+++ b/src/app/our-theme/our-theme.component.html
@@ -109,7 +109,7 @@
               </div>
 </div>
     <div class="card"  >
-        <div class="flip-box-front"> <a href="https://babu365.com/"target="_blank">
+        <div class="flip-box-front"> <a href="https://babu365.vrnlexch.com/#/"target="_blank">
             <img class="lb_partner_logo logo4" src="assets/Babu365.png "alt="bb88_logo_w_sponsor" ></a>
            
             <h4 class="logoname">Babu365</h4>
