--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,13 +4,13 @@
     <div class="comp_row">
       <div class="comp_col">
         <a target="_blank" href="https://www.gamblingcommission.gov.uk">
-          <img src="assets/gamblingcomm.webp" alt="gamblingcomm" style="width:88px; margin-left: 5px;" width="88"
+          <img src="assets/gamblingcomm.webp" loading="lazy" alt="gamblingcomm" style="width:88px; margin-left: 5px;" width="88"
             height="88" />
         </a>
       </div>
       <div class="comp_col_1">
         <a target="_blank" href="https://gordonmoody.org.uk/">
-          <img class="comp_1" width="88" height="88" src="assets/gordonmoody.webp" alt="gordonmoody"
+          <img class="comp_1" width="88" height="88" src="assets/gordonmoody.webp" loading="lazy" alt="gordonmoody"
             style="width:88px; margin-left: 8px;" />
         </a>
       </div>
@@ -24,7 +24,7 @@
     <div class="comp_row seconcomp_row">
       <div class="comp_col">
         <a target="_blank" href="https://www.begambleaware.org/">
-          <img class="comp_2" src="assets/betblocker.webp" alt="betblocker" style="width:88px;" width="88"
+          <img class="comp_2" src="assets/betblocker.webp" loading="lazy" alt="betblocker" style="width:88px;" width="88"
             height="83" />
         </a>
 
