--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -47,7 +47,7 @@
         </button>
       </div>
       <div class="platform_col_22" appIntersectionObserver>
-        <img class="platform_img" src="assets/sportsbetting2.png" alt="Sport Betting Software">
+        <img class="platform_img" src="assets/sportsbetting2.webp" loading="lazy" alt="Sport Betting Software">
         <div class="platform_you_tube aside">
           <a href="#" aria-label="youtube link">
               <video controls controlsList="nodownload" playsinline autoplay [muted]="true" #videoPlayer class="video" (loadedmetadata)="onVideoLoad(videoPlayer)"
@@ -87,7 +87,7 @@
         <div class="white_back"></div>
       </div>
       <div class="whites_col_1">
-        <img class="whites_sec_img2" src="assets/Sports Betting Softwares1.png" alt="White Label Solutions" />
+        <img class="whites_sec_img2" src="assets/Sports Betting Softwares1.webp" loading="lazy" alt="White Label Solutions" />
       </div>
     </div>
   </section>
@@ -95,7 +95,7 @@
   <section class="gaming_sec">
     <div class="gaming_row">
       <div class="gaming_col">
-        <img class="gaming_img e" src="assets/vrnl igaming_11zon.webp" width="520" height="325"
+        <img class="gaming_img e" src="assets/vrnl igaming_11zon.webp" loading="lazy" width="520" height="325"
           alt="iGaming Platform" />
       </div>
       <div class="gaming_col_2">
@@ -146,7 +146,7 @@
         <div class="white_back"></div>
       </div>
       <div class="casino_col_2">
-        <img class="casino_sec_img2" src="assets/vrnl online c_11zon (1).webp" width="840" height="700"
+        <img class="casino_sec_img2" src="assets/vrnl online c_11zon (1).webp" loading="lazy" width="840" height="700"
           alt="Online Casino provider" />
       </div>
     </div>
@@ -159,7 +159,7 @@
         <h2 class="live_header">
           Play at the live casino as if you were directly inside the casino
         </h2>
-        <img src="assets/vrnl 19_11zon.webp" width="700" height="372" alt="live casino provider" />
+        <img src="assets/vrnl 19_11zon.webp" loading="lazy" width="700" height="372" alt="live casino provider" />
       </div>
       <div class="live_col_1">
         <h2 class="live_header_1">Live Casino</h2>
@@ -188,7 +188,7 @@
   <section class="integration_sec">
     <div class="integration_row">
       <div class="integration_col">
-        <img src="assets/api-iframe.png" title="integration_platforms" class="integration_col_img"
+        <img src="assets/api-iframe.webp" loading="lazy" title="integration_platforms" class="integration_col_img"
           alt="Integration with other platforms" />
       </div>
       <div class="integration_col_1">
@@ -241,7 +241,7 @@
         <div class="white_back"></div>
       </div>
       <div class="integration_col_1">
-        <img class="virtual_img" src="assets/Virtual Games Image1.png" alt="virtual games provider">
+        <img class="virtual_img" src="assets/Virtual Games Image1.webp" loading="lazy"    alt="virtual games provider">
       </div>
     </div>
   </section>
