--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -90,7 +90,7 @@
 <div class="sportsbetting-benefits-image">
       <img
         class="images_benefit_1"
-        src="assets/vrnl image 52_11zon.png"
+        src="assets/vrnl image 52_11zon.webp"
         alt="complete Sports betting software"
       />
     </div>
@@ -177,7 +177,7 @@
       </p>
     </div>
     <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/vrnl online c_11zon (1).webp" alt="Betting software" />
+      <img class="addverties_img" src="assets/vrnl online c_11zon (1).webp" loading="lazy" alt="Betting software" />
     </div>
   </div>
 </section>
