--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -108,7 +108,7 @@
 <section>
     <div class="easy-setup-main">
         <div class="easy-setup-col1-photo">
-<img src="assets/VRNL 1-1_11zon.jpg" alt="setup and creation of the online networks">
+<img src="assets/VRNL 1-1_11zon.webp" alt="setup and creation of the online networks">
         </div>
 
         <div class="easy-setup-col2">
