--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -84,7 +84,7 @@
         <div class="white_csol_col_1">
       <img
           class="casino_sec_img2"
-          src="assets/vrnl online c_11zon (1).webp"
+          src="assets/vrnl online c_11zon (1).webp" loading="lazy"
          alt=" Casino White Label"
         />
         </div>
