--- a/src/app/scroll-btn/scroll-btn.component.css
+++ b/src/app/scroll-btn/scroll-btn.component.css
@@ -1,14 +1,1 @@
-.scroll-button {
-  position: fixed;
-  bottom: 123px;
-  right: 38px;
-  padding: 5px 12px;
-  background-color: #A0C528;
-  color: #fff;
-  border: white;
-  cursor: pointer;
-  z-index: 999;
-}
-.hidden {
-  display: none;
-}
+.scroll-button{position:fixed;bottom:123px;right:38px;padding:5px 12px;background-color:#a0c528;color:#fff;border:#fff;cursor:pointer;z-index:999}.hidden{display:none}
